--- a/_posts/2021-09-04-Saturday.md
+++ b/_posts/2021-09-04-Saturday.md
@@ -1,16 +1,15 @@
 ---
 ---
-Images markdownguide.org
-To add an image, add an exclamation mark (!), followed by alt text in brackets, and the path or URL to the image asset in parentheses. You can optionally add a title after the URL in the parentheses.
 
-See Including images and resources in Jekyll. Then {{ site.baseurl }} must be added to path.
-https://stackoverflow.com/questions/28820917/jekyll-on-github-pages-not-displaying-images-and-has-broken-links  
+Uding desktop and localhost
 
-![My helpful screenshot](/JekyllFirst/assets/images/resizedoakcattle14062021.jpg)  
+Path with JekyllFirst
+![alt text in brackets](/JekyllFirst/assets/images/50px04092021.jpg)  
 
-![My helpful screenshot]({{ site.baseurl }}/assets/images/IMGabout50by40px03092021.jpg)
 
-Linking to a PDF for readers to download:  
-[get the PDF]({{ site.baseurl }}/assets/images/smallpdf03092021.pdf) directly. 
+Path with site baseurl
+![alt text in brackets]({{ site.baseurl }}/assets/images/50px04092021.jpg)
 
-![](/JekyllFirst/assets/images/IMGabout50by40px03092021.jpg)
+ 
+From yesterday
+![alt text in brackets](/JekyllFirst/assets/images/IMGabout50by40px03092021.jpg)
