rendering in localhost
layout : post added to frontmatter

--- a/_posts/2021-08-27-Thursday.md
+++ b/_posts/2021-08-27-Thursday.md
@@ -1,4 +1,5 @@
 ---
+layout: post
 ---
 The best solution todate for blog. Write text and equations in LYX.
 Each equation should be on a new line. Export as plain LaTex. Edit
