--- a/_posts/2021-08-27-Thursday1.md
+++ b/_posts/2021-08-27-Thursday1.md
@@ -1,4 +1,5 @@
 ---
+layout: post
 ---
 How to display an equation in a web page  
 First  https://www.mathjax.org/ Then https://github.com/dpvc (Davide Cervone at end of page)  
