--- a/_posts/2021-08-25-tidyup.md
+++ b/_posts/2021-08-25-tidyup.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Trip to Clonakilty"
+title:  "Summary of techniques to 21092021"
 date:   2021-08-25 19:30:30 +0100
 categories: 
 ---
@@ -66,3 +66,46 @@ All that is needed to get an equation to display on a web page is:
 the script tag above and double dollar latex code double dollar
 Such as "double dollar y=x^{3} double dollar" yields  
 $$y=x^{3}$$  
+ ---
+layout: post
+---
+The best solution todate for blog. Write text and equations in LYX.
+Each equation should be on a new line. Export as plain LaTex. Edit
+in Notepad++. Remove any additions to basic LaTex and surround each
+equation with double dollar signs. Cut and paste to .md blog file
+(Jekyll Minima, GitHub).  
+$$\frac{a}{b}\text{Press "ctrl+m" to make a text box. Enter your text}$$  
+$$\binom{n}{k}=\frac{n!}{(n-k)!k!}$$  
+$$\binom{n}{k}=\binom{n}{n-k}$$  
+$$\binom{n}{k}=\binom{n-1}{k}+\binom{n-1}{k-1}$$  
+$$(a+b)^{n}=\binom{n}{0}a^{n}+\binom{n}{1}a^{n-1}b+etc$$  
+$$2^{n}=\binom{n}{0}+\binom{n}{1}+...$$  
+This is text before the last equation:  
+$$\binom{n}{0}+...=\binom{n}{1}+...$$  
+This is text after the last equation.  
+ ---
+layout: post
+---
+How to display equations in pages and blogs    
+In layouts, go to both posts and pages html files  
+Add MathJax java script from MathJax site. 
+It is something like this where tags are removed to display.    
+script id="MathJax-script" async  
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"  
+script   
+The eques will display with front and back $ and $ arount LaTex.    
+$$\sigma = \sqrt{ \frac{1}{N} \sum_{i=1}^N (x_i -\mu)^2}$$    
+$$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$  
+These eques are copied from the MathJax site using right click, Tex Command and Clipboard.  
+ ---
+layout: post
+---
+Export this as so that MathJax can read it without modification.
+
+This is a display equation:
+
+$$y=\frac{x}{\alpha}$$
+
+This is an inline equation$y=\cos(\theta)$with no space after the dollar sign, updated.  
+ 
+ 
