--- a/_posts/2021-08-25-tidyup.md
+++ b/_posts/2021-08-25-tidyup.md
@@ -107,5 +107,79 @@ This is a display equation:
 $$y=\frac{x}{\alpha}$$
 
 This is an inline equation$y=\cos(\theta)$with no space after the dollar sign, updated.  
+  ---
+layout: post
+---
+20210830binom wip
+How many groups of k objects made be made from n objects if repetition is allowed.
+
+This is difficult. One of the best approaches is to think grapgically or to think physically.
+
+Suppose we have 3 objects: A,B,C
+
+How many gps of 2 may be formed with repetition?
+
+We may list all possible gps as { AA, AB, AC, BB, BC, CC}.
+
+So there are 6.
+
+In general, the solution in $$\dbinom{n+k-1}{k}$$ or $$\dbinom{n+k-1}{n-1}$$  
+
+ ---
+layout: post
+---
+20210831Combinations with repetitions.
+
+How many groups of n objects taken k at a time may be made if repetitions are allowed?
+
+The solution is $${n+k-1 \choose k}$$ or $${n+k-1 \choose n-1}$$ .
+
+To solve these, we must picture the situation.
+
+Suppose you want to distribute 15 ham sandwiches to eight people, with no restriction on how many each person gets. How many ways are there of choosing how many sandwiches each person gets?
+
+The answer is $${8+15-1 \choose 8-1}$$ or $${8+15-1 \choose 15}$$ .
+
+So the problem reduced to n=8 and k=15.
+
+Why is this?
+
+Stars and Bars
+
+This is the same as finding all the non negative integral solutions to $$a+b+c+d+e+f+g+h=15$$
+
+The stars and bars approach is based on 15 stars and 7 bars so the answer is $${15+7 \choose 7}$$ or equivalently $${15+7 \choose 15}$$
+
+Also follow up on multinomials such as $$\frac{n!}{a_1! \times a_2! \times \cdots \times a_k!}$$ which may also be written as $$\binom{n}{a_1, a_2, \ldots , n_k}$$.  
+---
+layout: post
+---
+20210901Fridaysnippets  
+Code snippets  
+To render a code block with syntax highlighting:
+{% highlight ruby %}
+def foo
+  puts 'foo'
+end
+{% endhighlight %}
+
+To render a code block with syntax highlighting:
+{% highlight ruby %}
+def print_hi(name)
+  puts "Hi, #{name}"
+end
+print_hi('Tom')
+{% endhighlight %}
+
+Insert HTML to Jekyll post  
+
+Create a folder with the name _includes/ in the DocumentRoot  
+  
+Then, create an HTML file inside, for example "mycomponent.html"  
  
+Omit DOCTYPE html  
+  
+Call the html in the post to get:
+
+{% include mycomponent.html %}    
  
