--- a/_posts/2021-08-25-tidyup.md
+++ b/_posts/2021-08-25-tidyup.md
@@ -277,3 +277,77 @@ n objects, k gps, of sizes $$a_{1},a_{2,}..a_{k}$$
 anagrams of MISSISSIPPI
 
 not for anagrams of LYX
+---  
+layout: post  
+---  
+2021-09-01-oldSaturday.md
+Using desktop and localhost
+
+Path with JekyllFirst
+![alt text in brackets](/JekyllFirst/assets/images/50px04092021.jpg)  
+
+
+Path with site baseurl
+![alt text in brackets]({{ site.baseurl }}/assets/images/50px04092021.jpg)
+
+ 
+From yesterday
+![alt text in brackets](/JekyllFirst/assets/images/IMGabout50by40px03092021.jpg)  
+
+Suppose you want to distribute 15 identical balls among eight distinguishable urns, with no restriction on how many in each urn. How many ways are there of choosing how many balls in each urn?  
+Picture one outcome: 3 balls in first urn, 0,0,0,0,0,7,5 balls in eight urn.  
+Stars and Bars: s s s I I I I I I s s s s s s s I I s s s s s , which is 15 stars and 7 bars.
+Number of ways is: $${n+k-1 \choose n-1}={15+7 \choose 7}={22 \choose 7}$$  
+Both $${n+k-1 \choose n-1}$$ and $${n+k-1 \choose k-1}$$ may be used. In the first case k is 15 and in the second case n is 15. 
+---  
+layout: post  
+---  
+2021-09-01-oldThursday-More-Stars-Bars.md
+Thursday More Stars than Bars and More Bars than Stars
+
+The case where $$x_{1,}x_{2},...>0$$ is denoted by SAB1
+
+The case where $$x_{1,}x_{2},...\geq0$$ is denoted by SAB2
+
+SAB2 allows for more bars than stars, but SAB1 obviously does not.
+
+In how many ways can 7 balls be placed in 10 bins?
+
+7 balls means 7 stars and 10 bins means 9 bars so the solu is $${n+k-1 \choose k-1}={7+9 \choose 9}={16 \choose 9}$$
+
+In how many ways can 10 balls be placed in 7 bins?
+
+10 balls means 10 stars and 7 bins means 6 bars so the solu is $${n+k-1 \choose k-1}={10+6 \choose 6}={16 \choose 6}$$
+---  
+layout: post  
+---  
+2021-09-01-oldTuesday-TOC.md
+Tuesday : Basic and Advanced Counting  
+
+Basic Counting  
+
+Counting numbers to arrive at $$(n-k+1)$$  
+
+The Multiplication Principle  
+
+The Multiplication Principle and Factorials  
+
+The Subtraction Principle  
+
+Advanced Counting  
+
+Collections to arrive at $${n \choose k}=\frac{n!}{(n-k)!\times k!}$$  
+
+Binomial Coefficients including  
+$${n \choose k}={n \choose n-k}$$  
+$${n \choose k}={n-1 \choose k}+{n-1 \choose k-1}$$  
+$$(a+b)^{n}=a^{n}+{n \choose 1}a^{n-1}b+\cdots+b^{n}$$  
+$${n \choose 0}=1={n \choose n}$$  
+$$2^{n}={n \choose 0}+\cdots+{n \choose n}$$  
+$$Pascals\bigtriangleup$$  
+
+Applications of Collections  
+
+Multinomials  
+
+Collections with Repetitions  
