--- a/_posts/2021-08-25-tidyup.md
+++ b/_posts/2021-08-25-tidyup.md
@@ -351,3 +351,73 @@ Applications of Collections
 Multinomials  
 
 Collections with Repetitions  
+
+---  
+layout: post  
+---  
+2021-09-01-oldWednesday-Multinomials.md  
+
+Wednesday
+
+Multinomials
+
+n objects, k gps, sizes $$a_{1},a_{2},\ldots a_{k}$$   so that  $$a_{1}+\ldots+a_{k}=n$$.
+
+There are $${n \choose a_{1}}$$ways of forming the first gp.
+
+When that has been done, there are $${n-a_{1} \choose a_{2}}$$ ways of forming the second gp so there are  
+ $${n \choose a_{1}}$$x$${n-a_{1} \choose a_{2}}$$  
+ ways of forming the first two gps.
+
+The number of ways of forming all the gps is  
+ $${n \choose a_{1}}{n-a_{1} \choose a_{2}}\cdots\cdots {n-a_{1}-a_{2}-\cdots\cdots a_{k-1} \choose a_{k}}$$    
+ $$=\frac{n!}{a_{1}!(n-a_{1})!}\frac{(n-a_{1})!}{a_{2}!(n-a_{1}-a_{2})!}\cdots\cdots \frac{(n-a_{1}-\cdots\cdots a_{k-1})}{a_{k}!(1!)}$$    
+$$ =\frac{n!}{a_{1}!a_{2}!a_{3}!\cdots\cdots a_{k}!}$$    
+ 
+
+Display mode
+
+$${n \choose a_{1}}{n-a_{1} \choose a_{2}}\cdots\cdots {n-a_{1}-a_{2}-\cdots\cdots a_{k-1} \choose a_{k}}$$    
+$$=\frac{n!}{a_{1}!(n-a_{1})!}\frac{(n-a_{1})!}{a_{2}!(n-a_{1}-a_{2})!}\cdots\cdots \frac{(n-a_{1}-\cdots\cdots a_{k-1})}{a_{k}!(1!)}$$    
+$$=\frac{n!}{a_{1}!a_{2}!a_{3}!\cdots\cdots a_{k}!}$$    
+
+Notation
+
+$${n \choose a_{1},a_{2},\cdots\cdots a_{k}}=\frac{n!}{a_{1}!a_{2}!a_{3}!\cdots\cdots a_{k}!}$$
+---  
+layout: post  
+---  
+2021-09-01-oldTuesday-sigma.md  
+Tuesday
+
+Display mode has a couple differences from inline mode:
+
+Display mode $$\sum_{i=1}^{k}a_{i}=n$$
+
+Inline mode$$\sum_{i=1}^{k}a_{i}=n$$
+
+Source: LYX tutorial ch 4
+
+Advanced information in Help \> Math in Chapter 10 Operators.
+
+With the cursor just to the right of the summation symbol, click the subscript button to place the beginning of the limit below the sigma. With the cursor just to the right of the sigma, click the superscript button to place the end of the limit just above the sigma.
+
+Display mode with no adjustments to empty lines in markdown.
+
+$$\sum_{i=1}^{k}a_{i}=n$$
+
+In display mode at top of page empty markdown line before and after were deleted.
+---  
+layout: post  
+
+---  
+2021-09-01-oldcolour-in-markdown.md
+Modified on16th
+As it is not a "publishing format," providing a way to color your text is out-of-scope for Markdown.  
+That said, it is not impossible as you can include raw HTML (and HTML is a publishing format).  
+For example, the following Markdown text (as suggested by @scoa in a comment):  
+
+{% highlight ruby %}
+Some Markdown text with <span style="color:blue">some *blue* text</span>.
+{% endhighlight %}
+https://stackoverflow.com/questions/35465557/how-to-apply-color-in-markdown?rq=1
