old file deleted

--- a/_posts/2021-08-25-tidyup.md
+++ b/_posts/2021-08-25-tidyup.md
@@ -4,7 +4,7 @@ title:  "Summary of techniques to 21092021"
 date:   2021-08-25 19:30:30 +0100
 categories: 
 ---
-This blog is about the trip to Clonakilty.  
+ 
 find this post in your `_posts` directory.  
 Go ahead and edit it and re-build the site to see your changes.  
 You can rebuild the site in many different ways,  
@@ -440,3 +440,24 @@ The n objects are represented by stars.$$k-1$$bars are placed between the stars.
 st st st st | | st | st st |  
 means  
 four bars give rise to five bins containing 4, 0, 1, 2, and 0 objects.  
+
+The title is written as Clonakilty Trip  
+The permalink is written as Clonakilty-Trip  
+The file name is written as Clonakilty-Trip.md  
+SpaceSpace at end of line starts new line   
+
+This is the base Jekyll theme. You can find out more info about customizing your Jekyll theme, as well as basic Jekyll usage documentation at [jekyllrb.com](https://jekyllrb.com/)
+
+You can find the source code for Minima at GitHub:
+[jekyll][jekyll-organization] /
+[minima](https://github.com/jekyll/minima)
+
+You can find the source code for Jekyll at GitHub:
+[jekyll][jekyll-organization] /
+[jekyll](https://github.com/jekyll/jekyll)
+
+
+[jekyll-organization]: https://github.com/jekyll  
+Outcome with and without the double dollar signs.  
+\cos(\theta+\phi)=\cos(\theta)\cos(\phi)−\sin(\theta)\sin(\phi)  
+$$\cos(\theta+\phi)=\cos(\theta)\cos(\phi)−\sin(\theta)\sin(\phi)$$
