--- a/_posts/2021-08-25-tidyup.md
+++ b/_posts/2021-08-25-tidyup.md
@@ -3,6 +3,7 @@ layout: post
 title:  "Summary of techniques to 21092021"
 date:   2021-08-25 19:30:30 +0100
 categories: 
+topic: probab
 ---
  
 find this post in your `_posts` directory.  
