--- a/_posts/2021-08-25-tidyup.md
+++ b/_posts/2021-08-25-tidyup.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Summary of techniques to 21092021"
-topic: probab
+topic: probability
 ---
  
 find this post in your `_posts` directory.  
