--- a/_posts/2023-01-25-cron.md
+++ b/_posts/2023-01-25-cron.md
@@ -6,4 +6,25 @@ topic: counting
 How To Count
 Is cron working?
 Day 
-Modified on 31012022
+Modified on 27012023
+Kate wishes to invest €150 000 in a long‐term investment scheme. Cormac is an investment broker. He offers Kate a guaranteed annual interest rate of 5.2% on her investment.
+
+However Cormac will charge an annual fee of €3000, which will be deducted from her investment. The value, 𝑃, in €, of Kate’s investment after 𝑛 years may be modelled by the difference
+
+equation:  \(P_{n+1}=A\cdot P_{n}-B\) \(where\:n\geq0,n\in\mathbb{Z\:}and\:P_{0}=150,000\). Use rational numbers rather than decimals..
+
+What is the value of A? [[input:ans1]] [[validation:ans1]] [[feedback:prt1]]
+
+What is the value of B? [[input:ans2]] [[validation:ans2]] [[feedback:prt2]]
+
+The annual interest rate is 5.2%. After 1 year, \(P_{n}\) becomes \( P_{n}+\frac{5.2}{100}\cdot P_{n}\). 
+
+But \[{P_{n}+\frac{5.2}{100}\cdot P_{n}=P_{n}+\frac{52}{1000}\cdot P_{n} \\=\frac{1052}{1000}\cdot P_{n}=\frac{263}{250}\cdot P_{n} \\}\]
+
+An annual fee of 3000 Euro will be deducted from the investment. After 1 year, \( P_{n} \) becomes \( \frac{263}{250} \cdot P_{n} \) but then the fee is deducted. We get \( P_{n+1}= \frac{263}{250} \cdot P_{n} - 3000 \).
+
+
+
+
+
+ 
