--- a/_posts/2023-02-04-lcapolsp2022q3a.md
+++ b/_posts/2023-02-04-lcapolsp2022q3a.md
@@ -1,3 +1,12 @@
+---
+layout: post
+topic: counting
+---
+
+How To Count
+Is cron working?
+Day 
+Modified on 31012022
 
 $$P_{1}=1.052P_{0}-3000$$  
 $$P_{2}=1.052\,P_{1}-3000=1.052(1.052P_{0}-3000)=1.052^{2}P_{0}-1.052(3000)$$  
@@ -7,8 +16,8 @@ and so on. We now deduce:
 $$P_{n}=1.052^{n}P_{0}-(1.052^{n-1})(3000)-(1.052^{n-2})(3000)\cdots\cdots-(1.052)(3000)$$  
 $$P_{n}=1.052^{n}P_{0}-(1.052)(3000)(1.052^{n-2}+1.052^{n-3}\cdots\cdots+1)$$  
 $$P_{n}=1.052^{n}P_{0}-(1.052)(3000)(1+1.052^{1}+1.052^{2}+\cdots\cdots+1.052^{n-2})$$  
-This equation includes a geometric series of n-1 terms with first term 1 and common ratio 1.052.
- \[P_{n}=1.052^{n}P_{0}-(1.052)(3000)(\frac{1(1-1.052^{n-1})}{1-1.052})\]
+This equation includes a geometric series of n-1 terms with first term 1 and common ratio 1.052.  
+$$ \[P_{n}=1.052^{n}P_{0}-(1.052)(3000)(\frac{1(1-1.052^{n-1})}{1-1.052})\]$$  
 \[P_{n}=1.052^{n}P_{0}+(60692.308)(1-1.052^{n-1})\]
 The line above is the solution to the difference equation.
 But if we had expressed \[ 1.052\] as the rational number \[ \frac{1052}{1000} \], we would have arrived at the solution to the difference equation expressed as
