prt1 extract only

--- a/_posts/2023-02-04-lcapolsp2022q3a.md
+++ b/_posts/2023-02-04-lcapolsp2022q3a.md
@@ -4,9 +4,19 @@ topic: counting
 ---
 Modified on 27012023
 lcam ol sp 2022 q3a  
-started again AT 15:33
-$$ P_{1}=1.052P_{0}-3000 $$  
-
-$$ P_{2}=1.052\,P_{1}-3000=1.052(1.052P_{0}-3000)=1.052^{2}P_{0}-1.052(3000) $$  
-
-$$ P_{2}=1.052\,P_{1}-3000=1.052(1.052P_{0}-3000)=1.052^{2}P_{0}-(1.052)(3000) $$  
+started again AT 15:33  
+$$P_{1}=1.052P_{0}-3000$$      
+$$P_{2}=1.052\,P_{1}-3000=1.052(1.052P_{0}-3000)=1.052^{2}P_{0}-1.052(3000)$$  
+$$P_{2}=1.052\,P_{1}-3000=1.052(1.052P_{0}-3000)=1.052^{2}P_{0}-(1.052)(3000)$$  
+$$P_{3}=1.052\,P_{2}-3000=1.052((1.052^{2}P_{0}-(1.052)(3000))-3000)=1.052^{3}P_{0}-(1.052^{2})(3000)-(1.052)(3000)$$  
+and so on. We now deduce:  
+$$P_{n}=1.052^{n}P_{0}-(1.052^{n-1})(3000)-(1.052^{n-2})(3000)\cdots\cdots-(1.052)(3000)$$  
+$$P_{n}=1.052^{n}P_{0}-(1.052)(3000)(1.052^{n-2}+1.052^{n-3}\cdots\cdots+1)$$  
+$$P_{n}=1.052^{n}P_{0}-(1.052)(3000)(1+1.052^{1}+1.052^{2}+\cdots\cdots+1.052^{n-2})$$  
+This equation includes a geometric series of n-1 terms with first term 1 and common ratio 1.052.  
+$$P_{n}=1.052^{n}P_{0}-(1.052)(3000)(\frac{1(1-1.052^{n-1})}{1-1.052})$$  
+$$P_{n}=1.052^{n}P_{0}+(60692.308)(1-1.052^{n-1})$$  
+The line above is the solution to the difference equation.  
+But if we had expressed $$ 1.052$$ as the rational number $$ \frac{1052}{1000} $$, we would have arrived at the solution to the difference equation expressed as  
+$$P_{n}=150000 {{\left( \frac{1052}{1000}\right) }^{n}}-\frac{\frac{1052}{1000} (3000) \left( 1-{{\left( \frac{1052}{1000}\right) }^{n-1}}\right) }{1-\frac{1052}{1000}}\mbox{} $$  
+From this we can see the effect of changing the interest rate or the annual fee.   
