--- a/_posts/2023-02-04-lcapolsp2022q3a.md
+++ b/_posts/2023-02-04-lcapolsp2022q3a.md
@@ -10,3 +10,7 @@ $$P_{2}=1.052\,P_{1}-3000=1.052(1.052P_{0}-3000)=1.052^{2}P_{0}-1.052(3000)$$
 $$P_{2}=1.052\,P_{1}-3000=1.052(1.052P_{0}-3000)=1.052^{2}P_{0}-(1.052)(3000)$$  
 $$P_{3}=1.052\,P_{2}-3000=1.052((1.052^{2}P_{0}-(1.052)(3000))-3000)=1.052^{3}P_{0}-(1.052^{2})(3000)-(1.052)(3000)$$  
 and so on. We now deduce:  
+$$P_{n}=1.052^{n}P_{0}-(1.052^{n-1})(3000)-(1.052^{n-2})(3000)\cdots\cdots-(1.052)(3000)$$  
+$$P_{n}=1.052^{n}P_{0}-(1.052)(3000)(1.052^{n-2}+1.052^{n-3}\cdots\cdots+1)$$  
+$$P_{n}=1.052^{n}P_{0}-(1.052)(3000)(1+1.052^{1}+1.052^{2}+\cdots\cdots+1.052^{n-2})$$  
+This equation includes a geometric series of n-1 terms with first term 1 and common ratio 1.052. 
