image in assets/images/

--- a/_posts/2023-03-20-cron.md
+++ b/_posts/2023-03-20-cron.md
@@ -6,5 +6,5 @@ topic: counting
 How To Count
 Is cron working?
 Day 
-Modified on 20032023
-![image](image.png)
+Modified on 20032023 20 07
+![image]((/assets/images/image.jpg)
