--- a/_posts/2023-06-01-cron.md
+++ b/_posts/2023-06-01-cron.md
@@ -7,3 +7,5 @@ How To Count
 Is cron working?
 Day 
 Modified on 31012022
+MathJax is a Javascript display engine for mathematical formulas like ( (b pm sqrt{b^2-4ac})/(2a) )
+[ vec{v} imes vec{w} = egin{vmatrix} vec{i} & vec{j} & vec{k} \ rac{partial vec{v}}{partial x} & rac{partial vec{v}}{partial y} & rac{partial vec{v}}{partial z} \ rac{partial vec{w}}{partial x} & rac{partial vec{w}}{partial y} & rac{partial vec{w}}{partial z} \ nd{vmatrix} ]
