--- a/_posts/2023-09-02-cron.md
+++ b/_posts/2023-09-02-cron.md
@@ -7,13 +7,12 @@ How To Count
 Is cron working?
 Day 
 Modified on 31012022  
-Maxima Boris Gaertner updated 02092023  
-http://www.bildungsgueter.de/MaximaEN/Contents.htm  
+Maxima Boris Gaertner updated 02092023
+<a href="http://www.bildungsgueter.de/MaximaEN/Contents.htm" target="_blank">http://www.bildungsgueter.de/MaximaEN/Contents.htm</a>  
 Newest additions made at Apr 12th, 2021  
 The Computer Algebra Program MAXIMA - a Tutorial from bildungsgueter.de  
 Editor: Boris.Gaertner@gmx.net. This tutorial covers the use of the computer algebra program Maxima.  
-
-http://www.bildungsgueter.de/index.html  
-
+<a href="http://www.bildungsgueter.de/index.html" target="_blank">http://www.bildungsgueter.de/index.html</a>   
 Maxima for Android  
-http://www.bildungsgueter.de/MaximaAndroid/Contents.htm  
+<a href="http://www.bildungsgueter.de/MaximaAndroid/Contents.htm" target="_blank">http://www.bildungsgueter.de/MaximaAndroid/Contents.htm</a>  
+ 
