--- a/_posts/2024-01-31-image.md
+++ b/_posts/2024-01-31-image.md
@@ -4,6 +4,6 @@ topic: counting
 ---
   
 
-![image tooltip here](/assets/images/image2.jpg)  
+![image2 tooltip here](./../assets/images/image2.jpg)  
 
 
