--- a/_posts/2024-01-31-image.md
+++ b/_posts/2024-01-31-image.md
@@ -4,6 +4,7 @@ topic: counting
 ---
   
 
-![image2 tooltip here](./../assets/images/image2.jpg)  
+![image3 tooltip here](/AppliedMaths/assets/images/image2.jpg)  
+  
 
 
