--- a/_posts/2024-01-31-image.md
+++ b/_posts/2024-01-31-image.md
@@ -5,6 +5,7 @@ topic: counting
   
 
 ![image3 tooltip here](/AppliedMaths/assets/images/image2.jpg)  
-  
-
-
+![image3 tooltip here](/AppliedMaths/assets/images/image.jpg)    
+![image3 tooltip here](/AppliedMaths/assets/images/SimultaneousEques.jpg)    
+![image3 tooltip here](/AppliedMaths/assets/images/smallpdf03092021.pdf)  
+![image3 tooltip here](/AppliedMaths/assets/images/IMGabout50by40px03092021.jpg)  
