labels for images

--- a/_posts/2024-01-31-image.md
+++ b/_posts/2024-01-31-image.md
@@ -3,9 +3,14 @@ layout: post
 topic: counting
 ---
   
-
+First image   
 ![image3 tooltip here](/AppliedMaths/assets/images/image2.jpg)  
+next  
 ![image3 tooltip here](/AppliedMaths/assets/images/image.jpg)    
+third  
 ![image3 tooltip here](/AppliedMaths/assets/images/SimultaneousEques.jpg)    
+
+fourth  
 ![image3 tooltip here](/AppliedMaths/assets/images/resizedoakcattle14062021.jpg)    
+fifth  
 ![image3 tooltip here](/AppliedMaths/assets/images/IMGabout50by40px03092021.jpg)    
