Justin Smith Graph Theory

--- a/_posts/2024-07-08-cron.md
+++ b/_posts/2024-07-08-cron.md
@@ -2,27 +2,17 @@
 layout: post
 topic: counting
 ---
-How To Count
-Is cron working?
-Day 
-Modified on 09022023
-Node 1 true feedback  
-When Cormac offes 5.2% with a 3000 Euro fee, we have seen that the value $$P_{6}$$ of Kate's investment after 6 years is given by  
-$$P_{6}=150000 $$  
-LaTeX  from Maxima will not run on jekyll  
-$$
-\begin{align*}
-  & \phi(x,y) = \phi \left(\sum_{i=1}^n x_ie_i, \sum_{j=1}^n y_je_j \right)
-  = \sum_{i=1}^n \sum_{j=1}^n x_i y_j \phi(e_i, e_j) = \\
-  & (x_1, \ldots, x_n) \left( \begin{array}{ccc}
-      \phi(e_1, e_1) & \cdots & \phi(e_1, e_n) \\
-      \vdots & \ddots & \vdots \\
-      \phi(e_n, e_1) & \cdots & \phi(e_n, e_n)
-    \end{array} \right)
-  \left( \begin{array}{c}
-      y_1 \\
-      \vdots \\
-      y_n
-    \end{array} \right)
-\end{align*}
-$$
+ 
+Modified on 12072024    
+<a href="http://www.five-dimensions.org/Textbooks/adventures.pdf" target="_blank">Justin Smith Ch.9 Graph Theory P169 of pdf</a>  
+<a href="https://old.maa.org/press/periodicals/convergence/leonard-eulers-solution-to-the-konigsberg-bridge-problem" target="_blank">Leonard Euler's Solution to the Konigsberg Bridge Problem</a>  
+<a href="https://www.collegesidekick.com/study-docs/701741" target="_blank">Mathematics_of_Graph.pdf</a>  
+<a href="https://www.youtube.com/watch?v=1VL2fl1_wB8" target="_blank">Euler's Equation: 'The Most Beautiful Theorem in Mathematics'</a>  
+
+
+
+
+
+<!--a href="https://www.w3schools.com/" target="_blank">Visit W3Schools!</a-->
+<!--https://narkive.com/5dpqQgt3:2.571.143-->
+
