--- a/_posts/2025-08-08-JSXGraph.md
+++ b/_posts/2025-08-08-JSXGraph.md
@@ -6,10 +6,10 @@ Modified on 12082025
 JSXGraph  
  
 <a href="https://jsxgraph.org/" target="_blank">Project web site: https://jsxgraph.org/</a>  
-<a href="https://maxima.sourceforge.io/docs/manual/maxima_toc.html" target="_blank">manual/maxima</a>  
-<a href="https://maxima.sourceforge.io/docs/manual/maxima_212.html" target="_blank">descriptive</a>  
-<a href="https://maxima.sourceforge.io/docs/manual/maxima_219.html" target="_blank">distrib</a>  
-<a href="https://moodle.org/mod/forum/discuss.php?d=321745https://moodle.org/mod/forum/discuss.php?d=321745" target="_blank">moodle</a>  
+<a href="https://jsxgraph.org/wiki/" target="_blank">Project wiki with hundreds of examples: https://jsxgraph.org/wiki/</a>  
+<a href="https://github.com/jsxgraph/jsxgraph" target="_blank">GitHub project site: https://github.com/jsxgraph/jsxgraph</a>  
+<a href="GitHub project site: https://github.com/jsxgraph/jsxgraph" target="_blank">YouTube channel: https://www.youtube.com/channel/UCANBFoVoOyW2eNyTvx-VZdQ</a>  
+<a href="https://github.com/jsxgraph/moodle-filter_jsxgraph" target="_blank">Moodle filter: https://github.com/jsxgraph/moodle-filter_jsxgraph</a>  
 
 
   
