--- a/_posts/2025-08-08-JSXGraph.md
+++ b/_posts/2025-08-08-JSXGraph.md
@@ -5,6 +5,7 @@ topic: counting
 Modified on 12082025   
 JSXGraph  
  
+<a href="https://ipesek.github.io/jsxgraphbook/" target="_blank">This is a manual about JSXGraph: https://ipesek.github.io/jsxgraphbook/</a> 
 <a href="https://jsxgraph.org/" target="_blank">Project web site: https://jsxgraph.org/</a>  
 <a href="https://jsxgraph.org/wiki/" target="_blank">Project wiki with hundreds of examples: https://jsxgraph.org/wiki/</a>  
 <a href="https://github.com/jsxgraph/jsxgraph" target="_blank">GitHub project site: https://github.com/jsxgraph/jsxgraph</a>  
